DesiNZC/main/default/objects/Case/fields/CasTotalScp3DnstrmEmissions__c.field-meta.xml
<CustomField>
    <fullName>CasTotalScp3DnstrmEmissions__c</fullName>
    <description>Roll-Up of Total Scope 3 Downstream Emissions (tCO2)</description>
    <label>Total Scope 3 Downstream Emissions(tCO2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>