DesiNZC/main/default/objects/Case/fields/CasTotalScp3UpstrmEmissions__c.field-meta.xml
<CustomField>
    <fullName>CasTotalScp3UpstrmEmissions__c</fullName>
    <description>Roll-Up of Total Scope 3 Upstream Emissions (tCO2e)</description>
    <label>Total Scope 3 Upstream Emissions (tCO2e)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>