DesiNZC/main/default/objects/Case/fields/CasTotScope2LocBasedEmissions__c.field-meta.xml
<CustomField>
    <fullName>CasTotScope2LocBasedEmissions__c</fullName>
    <label>Total Scope 2 Location-Based Emissions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>