DesiNZC/main/default/objects/Case/fields/Scope_3_Carbon_Footprint__c.field-meta.xml
<CustomField>
    <fullName>Scope_3_Carbon_Footprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scope 3 Carbon Footprint</label>
    <referenceTo>Scope3CrbnFtprnt</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>