DesiNZC/main/default/objects/Case/fields/Vehicle_Asset_Carbon_Footprint__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Asset_Carbon_Footprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Asset Carbon Footprint</label>
    <referenceTo>VehicleAssetCrbnFtprnt</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>